--- a/spring-boot-learn2/pom.xml
+++ b/spring-boot-learn2/pom.xml
@@ -3,15 +3,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.2.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>com.geekq</groupId>
+		<artifactId>learn-spring-boot</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>com.geekq</groupId>
 	<artifactId>spring-boot-learn2</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>spring-boot-learn2</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
